--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   
   <button id="calculate">Sonuçları Hesapla</button>
 
-  <h2>Sonuçlar</h2>
-  <pre id="results"></pre>
+  <h2>Sonuçlar:</h2>
+  <ul id="results-list"></ul>
 
   <script src="app.js"></script>
 </body>
