--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Deneme Sonuç Hesaplama</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Deneme Sonuç Hesaplama</h1>
-  
-  <label for="json-upload">JSON Dosyasını Yükleyin:</label>
-  <input type="file" id="json-upload" accept=".json">
-  
-  <button id="calculate">Sonuçları Hesapla</button>
+  <div class="container">
+    <header>
+      <h1>Deneme Sonuç Hesaplama</h1>
+    </header>
 
-  <h2>Sonuçlar:</h2>
-  <ul id="results-list"></ul>
+    <section class="upload-section">
+      <label for="json-upload" class="upload-label">JSON Dosyasını Yükleyin:</label>
+      <input type="file" id="json-upload" accept=".json" class="file-input">
+      <button id="calculate" class="calculate-btn">Sonuçları Hesapla</button>
+    </section>
+
+    <section class="results-section">
+      <h2>Sonuçlar:</h2>
+      <ul id="results-list" class="results-list"></ul>
+    </section>
+  </div>
 
   <script src="app.js"></script>
 </body>
