--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <button id="calculate" class="calculate-btn">Sonuçları Hesapla</button>
     </section>
 
+    <section class="sorting-section">
+      <button id="sort-high-to-low" class="sort-btn">En Yüksekten En Aza Sırala</button>
+      <button id="sort-low-to-high" class="sort-btn">En Azdan En Yükseğe Sırala</button>
+    </section>
+
     <section class="results-section">
       <h2>Sonuçlar:</h2>
       <ul id="results-list" class="results-list"></ul>
